cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09369_259918604.yaml
Parameters:
  imageName:
    Type: String
    Default: mircohaug/reddit-compiler-backend
    Description: The name of the image to be deployed
Resources:
  redditcompilerapiapivpc82E737F6:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: reddit-compiler-api/reddit-compiler-api-api/vpc
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/Resource
  redditcompilerapiapivpcpublicSubnet1SubnetF97E0A5F:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/17
      VpcId:
        Ref: redditcompilerapiapivpc82E737F6
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet1
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet1/Subnet
  redditcompilerapiapivpcpublicSubnet1RouteTable896A57A6:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: redditcompilerapiapivpc82E737F6
      Tags:
        - Key: Name
          Value: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet1
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet1/RouteTable
  redditcompilerapiapivpcpublicSubnet1RouteTableAssociation3A8A1074:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: redditcompilerapiapivpcpublicSubnet1RouteTable896A57A6
      SubnetId:
        Ref: redditcompilerapiapivpcpublicSubnet1SubnetF97E0A5F
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet1/RouteTableAssociation
  redditcompilerapiapivpcpublicSubnet1DefaultRouteCDA16203:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: redditcompilerapiapivpcpublicSubnet1RouteTable896A57A6
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: redditcompilerapiapivpcIGW65057EB9
    DependsOn:
      - redditcompilerapiapivpcVPCGWC9CCC2DD
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet1/DefaultRoute
  redditcompilerapiapivpcpublicSubnet2Subnet70FC5079:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/17
      VpcId:
        Ref: redditcompilerapiapivpc82E737F6
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet2
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet2/Subnet
  redditcompilerapiapivpcpublicSubnet2RouteTable4181EBB7:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: redditcompilerapiapivpc82E737F6
      Tags:
        - Key: Name
          Value: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet2
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet2/RouteTable
  redditcompilerapiapivpcpublicSubnet2RouteTableAssociation0DE84023:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: redditcompilerapiapivpcpublicSubnet2RouteTable4181EBB7
      SubnetId:
        Ref: redditcompilerapiapivpcpublicSubnet2Subnet70FC5079
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet2/RouteTableAssociation
  redditcompilerapiapivpcpublicSubnet2DefaultRoute40450B2B:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: redditcompilerapiapivpcpublicSubnet2RouteTable4181EBB7
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: redditcompilerapiapivpcIGW65057EB9
    DependsOn:
      - redditcompilerapiapivpcVPCGWC9CCC2DD
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/publicSubnet2/DefaultRoute
  redditcompilerapiapivpcIGW65057EB9:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: reddit-compiler-api/reddit-compiler-api-api/vpc
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/IGW
  redditcompilerapiapivpcVPCGWC9CCC2DD:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: redditcompilerapiapivpc82E737F6
      InternetGatewayId:
        Ref: redditcompilerapiapivpcIGW65057EB9
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/vpc/VPCGW
  redditcompilerapiapiapiGWF6B159D3:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: reddit-compiler-api-api-apiGW
      ProtocolType: HTTP
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/apiGW/Resource
  redditcompilerapiapiapiGWDefaultRouteE2D1F145:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId:
        Ref: redditcompilerapiapiapiGWF6B159D3
      RouteKey: $default
      Target:
        Fn::Join:
          - ""
          - - integrations/
            - Ref: redditcompilerapiapiapiGWHttpIntegrationb68dbac424401a656a8971dbe734f1a8CF239F0B
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/apiGW/DefaultRoute/Resource
  redditcompilerapiapiapiGWHttpIntegrationb68dbac424401a656a8971dbe734f1a8CF239F0B:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId:
        Ref: redditcompilerapiapiapiGWF6B159D3
      IntegrationType: HTTP_PROXY
      IntegrationMethod: ANY
      IntegrationUri: https://www.httpbin.org/anything/?message=this-should-get-ovberwritten-by-the-first-starting-container
      PayloadFormatVersion: "1.0"
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/apiGW/HttpIntegration-b68dbac424401a656a8971dbe734f1a8/Resource
  redditcompilerapiapiapiGWDefaultStage367D5836:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      ApiId:
        Ref: redditcompilerapiapiapiGWF6B159D3
      StageName: $default
      AutoDeploy: true
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/apiGW/DefaultStage/Resource
  redditcompilerapiapiclusterE417C3ED:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/cluster/Resource
  redditcompilerapiapiAppTaskDefinitionTaskRoleA2830080:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/TaskRole/Resource
  redditcompilerapiapiAppTaskDefinitionTaskRoleDefaultPolicy6C814166:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - apigateway:GET
              - apigateway:PATCH
            Effect: Allow
            Resource:
              - Fn::Join:
                  - ""
                  - - "arn:aws:apigateway:"
                    - Ref: AWS::Region
                    - ::/apis/
                    - Ref: redditcompilerapiapiapiGWF6B159D3
              - Fn::Join:
                  - ""
                  - - "arn:aws:apigateway:"
                    - Ref: AWS::Region
                    - ::/apis/
                    - Ref: redditcompilerapiapiapiGWF6B159D3
                    - /*
        Version: "2012-10-17"
      PolicyName: redditcompilerapiapiAppTaskDefinitionTaskRoleDefaultPolicy6C814166
      Roles:
        - Ref: redditcompilerapiapiAppTaskDefinitionTaskRoleA2830080
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/TaskRole/DefaultPolicy/Resource
  redditcompilerapiapiAppTaskDefinition4644641B:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image:
            Ref: imageName
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: redditcompilerapiapiAppTaskDefinitionappLogGroup866CF2CF
              awslogs-stream-prefix: reddit-compiler-api-api
              awslogs-region:
                Ref: AWS::Region
          Name: app
        - Environment:
            - Name: API_GATEWAY_ID
              Value:
                Ref: redditcompilerapiapiapiGWF6B159D3
          Essential: true
          Image: mircohaug/aws-api-gateway-update-helper
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: redditcompilerapiapiAppTaskDefinitionsidecarapigwupdateLogGroupACC15296
              awslogs-stream-prefix: reddit-compiler-api-api
              awslogs-region:
                Ref: AWS::Region
          Name: sidecar-api-gw-update
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - redditcompilerapiapiAppTaskDefinitionExecutionRoleB46CBDA2
          - Arn
      Family: redditcompilerapiredditcompilerapiapiAppTaskDefinitionBDB0711C
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - redditcompilerapiapiAppTaskDefinitionTaskRoleA2830080
          - Arn
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/Resource
  redditcompilerapiapiAppTaskDefinitionappLogGroup866CF2CF:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/app/LogGroup/Resource
  redditcompilerapiapiAppTaskDefinitionExecutionRoleB46CBDA2:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/ExecutionRole/Resource
  redditcompilerapiapiAppTaskDefinitionExecutionRoleDefaultPolicyCC58FAAB:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - redditcompilerapiapiAppTaskDefinitionappLogGroup866CF2CF
                - Arn
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - redditcompilerapiapiAppTaskDefinitionsidecarapigwupdateLogGroupACC15296
                - Arn
        Version: "2012-10-17"
      PolicyName: redditcompilerapiapiAppTaskDefinitionExecutionRoleDefaultPolicyCC58FAAB
      Roles:
        - Ref: redditcompilerapiapiAppTaskDefinitionExecutionRoleB46CBDA2
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/ExecutionRole/DefaultPolicy/Resource
  redditcompilerapiapiAppTaskDefinitionsidecarapigwupdateLogGroupACC15296:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/AppTaskDefinition/sidecar-api-gw-update/LogGroup/Resource
  redditcompilerapiapifargateSecurityGroupF32ACEEF:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: reddit-compiler-api/reddit-compiler-api-api/fargateSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: redditcompilerapiapivpc82E737F6
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/fargateSecurityGroup/Resource
  redditcompilerapiapiFargateServiceD44332B8:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: redditcompilerapiapiclusterE417C3ED
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Fn::GetAtt:
                - redditcompilerapiapifargateSecurityGroupF32ACEEF
                - GroupId
          Subnets:
            - Ref: redditcompilerapiapivpcpublicSubnet1SubnetF97E0A5F
            - Ref: redditcompilerapiapivpcpublicSubnet2Subnet70FC5079
      TaskDefinition:
        Ref: redditcompilerapiapiAppTaskDefinition4644641B
    Metadata:
      aws:cdk:path: reddit-compiler-api/reddit-compiler-api-api/FargateService/Service
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.88.0,@aws-cdk/aws-apigatewayv2=1.88.0,@aws-cdk/aws-apigatewayv2-integrations=1.88.0,@aws-cdk/aws-applicationautoscaling=1.88.0,@aws-cdk/aws-autoscaling=1.88.0,@aws-cdk/aws-autoscaling-common=1.88.0,@aws-cdk/aws-autoscaling-hooktargets=1.88.0,@aws-cdk/aws-cloudwatch=1.88.0,@aws-cdk/aws-codeguruprofiler=1.88.0,@aws-cdk/aws-ec2=1.88.0,@aws-cdk/aws-ecr=1.88.0,@aws-cdk/aws-ecr-assets=1.88.0,@aws-cdk/aws-ecs=1.88.0,@aws-cdk/aws-elasticloadbalancingv2=1. [...]
    Metadata:
      aws:cdk:path: reddit-compiler-api/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  redditcompilerapiapistaticEndpoint5EFA4FCD:
    Description: Endpoint of the api gateway
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: redditcompilerapiapiapiGWF6B159D3
          - .execute-api.
          - Ref: AWS::Region
          - "."
          - Ref: AWS::URLSuffix
          - /
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
